--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>056_案例注册界面</title>
+    <title>陈同学的网页</title>
     <script>
         function huoqv_name(name){
             for (var i in document.getElementsByName(name).values) {
