--- a/python站点.html
+++ b/python站点.html
@@ -7,8 +7,6 @@
     <title>陈同学的个人网页_python站点</title>
 </head>
 <body>
-    <h1>python站点</h1>
-    <h2>已打包为exe下载</h2>
-    <a href="python/电子木鱼2.0.rar" download="电子木鱼2.0.rar"><h3>电子木鱼2.0_x64版本.rar</h3></a>
+    <h1>python站点(未启用)</h1>
 </body>
 </html>
