--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>陈同学的个人网页</title>
   <script type="text/javascript" src="D:\配置文件\self_pack\js\function.js"></script>
   <style>
     body {
