--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
 
 
   <script>
+    function random(min, max) {
+    max += 1
+    return Math.floor(Math.random() * (max - min) ) + min
+}
     var 剩余雷数 = 100
 
     
