--- a/在线游戏/踩雷游戏公测版.html
+++ b/在线游戏/踩雷游戏公测版.html
@@ -584,7 +584,7 @@
       for (var j=(i*25)-25;j<=(i*25)-1;j++) {
         if (random(1,6) != 1) {  // 空
           // document.write(`<span class="${hua_bu[j]}" id="O${(j+1).toString()}" value="1" onclick="main(this)"></span>`)
-          document.write(`<span class="lei" id="O${(j+1).toString()}" value="1"></span>`)
+          document.write(`<span class="f" id="O${(j+1).toString()}" value="1"></span>`)
         }
         else if (未部署雷数量 != 0) {  // 雷
           // document.write(`<span class="${hua_bu[j]}" id="X${(j+1).toString()}" value="1" onclick="main(this)"></span>`)
@@ -593,7 +593,7 @@
         }
         else {
           // document.write(`<span class="${hua_bu[j]}" id="O${(j+1).toString()}" value="1" onclick="main(this)"></span>`)
-          document.write(`<span class="lei" id="O${(j+1).toString()}" value="1"></span>`)
+          document.write(`<span class="f" id="O${(j+1).toString()}" value="1"></span>`)
         }
       }
       document.write('</div>')
